--- a/static/misimerahputih/index.html
+++ b/static/misimerahputih/index.html
@@ -67,7 +67,7 @@
 		var info = L.control();
 		info.onAdd = function (mymap) {
 			this._div = L.DomUtil.create('div', 'info');
-			this._div.innerHTML = '<a href="https://www.putusudarma.com/misimerahputih" style="text-decoration:none;"><h4>Baca Cerita</h4></a>' ;
+			this._div.innerHTML = '<a href="https://www.putusudarma.com/tags/misimerahputih" style="text-decoration:none;"><h4>Baca Cerita</h4></a>' ;
 			return this._div;
 		};
 		info.addTo(mymap);
