--- a/public/misimerahputih/index.html
+++ b/public/misimerahputih/index.html
@@ -12,8 +12,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="https://www.putusudarma.com/favicon/favicon-16x16.png">
     <link rel="manifest" href="https://www.putusudarma.com/favicon/site.webmanifest">
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+    
+	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 
     <style type="text/css">
     	body {
@@ -32,12 +33,13 @@
 			touch-action: none;
 			background-color: #445a71;position: relative;
 		}
-		.info,.instagram,.twitter { 
+		.info,.instagram,.twitter,.tentang { 
 			padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; 
 		} 
-		.info h4,.instagram h4,.twitter h4 { 
+		.info h4,.instagram h4,.twitter h4,.tentang h4 { 
 			margin: 0 0 5px; color: #777;
 		}
+
     </style>
 </head>
 <body>
@@ -47,14 +49,6 @@
 	<script>
 		var mymap = L.map('myMap').setView([-2.600029, 118.015776], 5);
 
-		/*L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-			maxZoom: 18,
-			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-				'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-				'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-			id: 'mapbox.streets'
-		}).addTo(mymap);*/
-
 		L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 			maxZoom: 18,
 			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
@@ -63,6 +57,14 @@
 			tileSize: 512,
 			zoomOffset: -1
 		}).addTo(mymap);
+
+		var tentang = L.control();
+		tentang.onAdd = function (mymap) {
+			this._div = L.DomUtil.create('div', 'tentang');
+			this._div.innerHTML = '<a href="#" style="text-decoration:none;" id="openTentang"><h4>Tentang</h4></a>' ;
+			return this._div;
+		};
+		tentang.addTo(mymap);
 
 		var info = L.control();
 		info.onAdd = function (mymap) {
@@ -82,6 +84,10 @@
 
 		L.marker([-5.144100, 119.415788], {icon: myIcon}).addTo(mymap)
 			.bindPopup("<center><img src='foto/sulawesi_selatan/cover.jpg' width='200' style='border-top-left-radius: 12px;border-top-right-radius: 12px;'><br /><b>Makassar, Sulawesi Selatan</b><br />2018</center>");
+		
+		document.getElementById("openTentang").onclick = function(){
+			alert('Status: 2/34; Misi Mengikuti Upacara 17 Agustus di 34 Ibukota Provinsi se-Indonesia');
+		}
 	</script>
 </body>
 </html>
